# examples

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Examples.sln  LICENSE  Makefile  README.md  black.toml  docker.package.json  eslint.config.mjs  example-readme-template.md.txt  gcp-credentials.json.enc  go.mod  go.work  go.work.sum  package-lock.json  package.json  renovate.json5  tslint.json  upload-examples.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
alexa-fortune/: index.ts  package.json  tsconfig.json
alexa-provider/: Pulumi.yaml  alexa.ts  index.ts  package.json  tsconfig.json
alicloud-ts-ecs/: Pulumi.yaml  README.md  index.ts  package.json
aws-apigateway-go-routes/: README.md  dns.go  go.mod  go.sum  lambdas.go  main.go
aws-apigateway-py-routes/: README.md  __main__.py  dns.py  lambdas.py  lambdas_.py  requirements.txt
aws-apigateway-ts-routes/: README.md  customDns.ts  dns.ts  helloHandler.ts  index.ts  lambdaAuthorizer.ts  package.json  tsconfig.json
aws-cs-eks/: EksStack.cs  (+4 more)
aws-ts-langserve/: .dockerignore  Dockerfile  README.md  index.ts  package.json  pyproject.toml  tsconfig.json
aws-ts-langserve/app/: server.py
google-native-ts-k8s-python-postgresql/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
google-native-ts-k8s-python-postgresql/app/: .dockerignore  Dockerfile  requirements.txt
google-native-ts-k8s-python-postgresql/app/app/: config.py  db.py  dependencies.py  lifespan.py  logconfig.py  main.py  routes.py
google-native-ts-k8s-python-postgresql/app/tests/: test_health.py
google-native-ts-k8s-python-postgresql/infra/: .gitignore  Pulumi.yaml  README.md  artifact-registry.ts  cluster.ts  config.ts  db.ts  iam.ts  index.ts  package.json  tsconfig.json
(+3828 files in other folders)
