[tool.poetry]
name = "aws-ts-langserve"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.34.0"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<3"
openai = "^1.10.0"
langchain-openai = "^0.0.5"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
